--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button class="btn-primary big-btn" onclick="openAuthModal('signup')">Get Started <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="hero-image animate-up delay-2">
-                <img src="images/new bot.1.png" alt="Yoga Health Illustration" class="floating-img">
+                <img src="./images/new bot.1.png" alt="Yoga Health Illustration" class="floating-img">
             </div>
         </header>
 
@@ -200,3 +200,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
