--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <div class="chat-header">
                             <div class="chat-bot-info">
                                 <div class="bot-avatar">
-                                    <img src="images/chatbot.jpg" alt="Bot" class="floating-img" style="width: 40px; height: 40px; object-fit: cover; border-radius: 50%;">
+                                    <img src="./chatbot.jpg" alt="Bot" class="floating-img" style="width: 40px; height: 40px; object-fit: cover; border-radius: 50%;">
                                     <div class="status-dot"></div>
                                 </div>
                                 <div>
@@ -200,6 +200,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
